# futurama

./: .clang-format  CMakeLists.txt
assets/: encounters.csv  meetings.csv  packages.csv
src/: CMakeLists.txt
src/app/client/: CMakeLists.txt
src/app/client/include/fut/app/: client.h  errorcode.h  futuramaappexception.h  game.h  gamemanager.h  scangenerator.h  sectorgenerator.h
src/app/client/src/fut/app/: client.cpp  game.cpp  gamemanager.cpp  scangenerator.cpp  sectorgenerator.cpp
src/dal/common/: CMakeLists.txt
src/dal/common/include/fut/dal/: encounterfilerepository.h  encounterrepository.h  meetingfilerepository.h  meetingrepository.h  packagefilerepository.h  packagerepository.h
src/dal/common/src/fut/dal/: encounterfilerepository.cpp  meetingfilerepository.cpp  packagefilerepository.cpp
src/domain/common/: CMakeLists.txt
src/domain/common/include/fut/domain/events/: encountersmoved.h  encounterstarted.h  enemyhit.h  enemymissed.h  gamestarted.h  movedtofield.h  movedtoheadquarters.h  movedtosector.h  packagepickedup.h  shipdamaged.h  shiprepaired.h  statechanged.h  victorypointschanged.h
src/domain/common/include/fut/domain/models/: character.h  encounter.h  encounterconsequence.h  encounterinstance.h  game.h  gamestate.h  meeting.h  meetingconsequence.h  meetingnegotiator.h  package.h  player.h  scan.h  scansector.h  sector.h  sectorfield.h  sectorfieldthing.h  sectorthing.h  ship.h  universe.h
src/infra/common/: CMakeLists.txt
src/infra/common/include/fut/infra/: clihelpers.h  concurrentautoincrement.h  csvparser.h  functionalerror.h  functionalerrorcategory.h  futuramaexception.h  point.h  randomnumbergenerator.h  subject.h
src/infra/common/src/fut/infra/: csvparser.cpp  functionalerrorcategory.cpp  randomnumbergenerator.cpp  subject.cpp
src/ui/clientcli/: CMakeLists.txt
src/ui/clientcli/src/: main.cpp
src/ui/clientcli/src/fut/ui/: clientcli.cpp  clientcli.h  command.h  commandparser.cpp  commandparser.h  statehandler.h  statehandlerbase.cpp  statehandlerbase.h  statehandlergameend.cpp  statehandlergameend.h  statehandlerheadquarters.cpp  statehandlerheadquarters.h  statehandlerinencounter.cpp  statehandlerinencounter.h  statehandlermenu.cpp  statehandlermenu.h  statehandlerontheway.cpp  statehandlerontheway.h  statehandlerpickingencounternegotiator.cpp  statehandlerpickingencounternegotiator.h  statehandlerpickingmeetingcharacter.cpp  statehandlerpickingmeetingcharacter.h  statehandlerstopped.cpp  statehandlerstopped.h
